v 1.1.5.5 (17 oct ?)

Some stats are hidden by default
Stats panel will be unlocked by default after the reset

UI should be now able to fit 1200 screen.
Added zoom in/out links for the left panel

v 1.1.5.4 (17 oct)
Changes by xranti:

Another fix for village stats.
__
Changes by Unihedron 0:

Better achievement tooltipts.
___
Happiness icon was changed to cute ascii-art.
Better happiness tooltip.
Fixed stats being lost upon resetting.
More reliable crafting messages and craft filter

v 1.1.5.3 (15 oct)
Changes by coderpatsy:

- Fix Hydraulic Fracturer not producing oil
- Factory Processing unlocks with Oil Processing
- Update paragon count on new millenium
- Grammar
- Also highlight buttons as limited if you don't have enough of a craftable resource and insufficient storage to craft more (https://redd.it/3ol29r)
- Add asterisk in tooltip price lines if a craftable's sub-price is limited

v 1.1.5.2 (11 oct)
Microwarp reactors

Slightly boosted cryostorage
Kerosene prices of space missions were increased

v 1.1.5.1 (10 oct)

Basic statistic for the game
Rebalancing kerosene prices

v 1.1.5.0 (7 oct)

Oil processing
Kerosene

Oil Distillation
Factory Processing

Hydro Fracturer
Cryostation
_
Sefirot tree (3/11)

v 1.1.4.3 (6 oct)

Added support for crafting undo (more options coming)
Kongregate API integration

Changes by coderpatsy:

Add Workshop Automation log filter

v 1.1.4.2 (26 sep)

Changes by coderpatsy:

Fix buildings not always showing that they are on
Fix active tabs not highlighting their link
Fix catnip max not being recalculated properly when buying Silos

v 1.1.4.1 (16 sep)

Changes by coderpatsy:

Fix lunar outposts converting uranium even when all are off (https://redd.it/3lbrj3)
Make sure moon programs are unlocked when converting saves
Fix negative numbers not getting postfixed
Fix postfixed numbers displaying postfix after "/s"
Fix typoed variable name (RIP usePetTickHack)

Changes by xranti:

Additional fix to lunar outpost